# Sigrok

./: .gitignore  BOT_PERMISSIONS.md  DIAGNOSTIC_ANSWERS.md  README.md  pyproject.toml  settings.toml  settings.toml.example  test_tokenizers.py
alembic/: env.py
alembic/versions/: b7c4e2a1d903_rename_users_iq_to_rating.py  e1f4a9c83d27_drop_bets_table_and_num_bets.py
deploy/: ROLLBACK_LLAMA_CPP.md  apply_llamacpp_cutover.sh  rollback_llamacpp_cutover.sh
deploy/systemd/: llama-server.service  open-webui-llamacpp.override.conf  sigrok.service
resources/: personality_sigrok_mean.txt  sigrok_personality_prompt.backup.2026-03-27.txt  sigrok_personality_prompt.backup.pre-response-refresh.2026-03-27.txt  sigrok_personality_prompt.backup.pre-v3-tone.2026-03-27.txt  sigrok_personality_prompt.txt  sigrok_personality_prompt_v4.1_backup.txt
scripts/: test_db.py
src/iqbot/: bot.py  config.py  db.py  genai.py
src/iqbot/cogs/: backup.py  betting.py  misc.py  owner.py
src/sigrok/: bot.py  checks.py  config.py  db.py  genai.py  social_client.py
src/sigrok/cogs/: admin.py  backup.py  betting.py  bluesky.py  conditional_posts.py  iq.py  misc.py  owner.py  presence.py  voice_rec.py
tests/: test_genai_context_and_web.py
