[project]
name = "sigrok"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "PyNaCl (>=1.3.0,<1.6.0)",
    "openai (>2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "py-cord (>=2.6.1,<3.0.0)",
    "python-box (>=7.3.2,<8.0.0)",
    "icecream (>=2.1.4,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "anthropic (>=0.84.0,<0.85.0)",
    "aiohttp (>=3.11.0,<4.0.0)",
    "tokenizers[anthropic] (>=0.22.2,<0.23.0)",
]

[tool.poetry]
packages = [{include = "sigrok", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
